fix containers css for visibility in safari

--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -22,7 +22,8 @@
     width: 200px;
     border-radius: 10px;
     font-size: 20px;
-    background-color:rgb(255, 255, 255, 0.965);
+    background-color: rgb(255,255,255);
+    background-color: rgb(255, 255, 255, 0.965);
     box-shadow: 0 3px 6px 2px rgba(111, 111, 111, 0.5);
 }
 .weather_initial_content{
